--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,10 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans:600|Roboto:900,700"
+      href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400,400i,700"
       rel="stylesheet"
     />
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
